# rgb-lib

./: Cargo.toml
src/: error.rs  lib.rs  utils.rs
src/wallet/: offline.rs  online.rs
src/wallet/test/: blind_receive.rs  get_asset_metadata.rs  mod.rs  refresh.rs  save_new_asset.rs  witness_receive.rs
src/wallet/test/utils/: api.rs  helpers.rs
