[package]
name = "rgb-lib"
version = "0.3.0-alpha.2"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/RGB-Tools/rgb-lib"
homepage = "https://github.com/RGB-Tools/rgb-lib"
license = "MIT"
description = "RGB wallet library"
exclude = ["migration"]

[workspace]
members = [".", "migration"]

[dependencies]
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
bdk = { version = "0.29", default-features = false, features = [
    "key-value-db",
    "keys-bip39",
    "std",
] }
bitcoin = { version = "0.30.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
    "stream",
] }
electrum-client = { version = "0.19.0", optional = true, default-features = false, features = [
    "proxy",
    "use-rustls",
] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
hex = { version = "0.4.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "native-tls",
] }
rgb-lib-migration = { path = "migration", version = "0.3.0-alpha.1" }
scrypt = { version = "0.11.0", default-features = false, features = [
    "simple",
    "std",
] }
sea-orm = { version = "=0.12.15", default-features = false, features = [
    "macros",
    "runtime-async-std-native-tls",
    "sqlx-sqlite",
] }
sea-query = { version = "=0.30.7", default-features = false }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = { version = "^1.0", default-features = false, features = [
    "preserve_order",
] }
slog = { version = "2.7.0", default-features = false }
slog-async = { version = "2.8.0", default-features = false }
slog-term = { version = "2.9.1", default-features = false }
tempfile = { version = "3.10.1", default-features = false }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3.34", default-features = false }
tree_magic = { version = "0.2.3", default-features = false }
typenum = { version = "1.17.0", default-features = false }
walkdir = { version = "2.5.0", default-features = false }
zip = { version = "0.6.6", default-features = false, features = ["zstd"] }

# RGB-related deps
amplify = { version = "4.6.0", default-features = false }
bp-core = { version = "0.11.0-beta.5", default-features = false }
bp-electrum = { version = "0.11.0-beta.5", optional = true, default-features = false, features = [
    "proxy",
    "use-rustls",
] }
bp-seals = { version = "0.11.0-beta.5", default-features = false }
bp-std = { version = "0.11.0-beta.5", default-features = false }
commit_verify = { version = "0.11.0-beta.5", default-features = false }
rgb-core = { version = "0.11.0-beta.5", default-features = false, features = [
    "stl",
] }
rgb-invoice = { version = "0.11.0-beta.5", default-features = false }
rgb-psbt = { git = "https://github.com/eauxxs/rgb", branch = "dev" }
# rgb-persist-fs = { version = "0.11.1", default-features = false }
# rgb-runtime = { version = "0.11.0-beta.5", default-features = false, features = [
#     "serde",
# ] }
rgb-runtime = { git = "https://github.com/eauxxs/rgb", branch = "dev", features = [
    "all",
] }
# rgb-schemata = { version = "0.11.0-beta.5", default-features = false }
rgb-schemata = { git = "https://github.com/RGB-WG/rgb-schemata", branch = "master" }
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces", branch = "master" }
rgb-std = { version = "0.11.0-beta.5", default-features = false }
strict_encoding = { version = "2.7.0-beta.1", default-features = false }
strict_encoding_derive = { version = "2.7.0-beta.1", default-features = false }          # temporary dependency pin
strict_types = { version = "2.7.0-beta.2", default-features = false }

[dev-dependencies]
copy_dir = { version = "0.1.3", default-features = false }
dircmp = { version = "0.2.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
regex = { version = "1.10.4", default-features = false }
serial_test = { version = "3.0.0", default-features = false }

[features]
default = ["electrum"]
all = ["electrum", "esplora"]
electrum = [
    "bdk/electrum",
    "bp-electrum",
    "electrum-client",
    # "rgb-runtime/electrum_blocking ",
]
esplora = ["bdk/use-esplora-blocking"]

[patch.crates-io]
strict_encoding = { git = "https://github.com/strict-types/strict-encoding", branch = "develop" }
strict_types = { git = "https://github.com/strict-types/strict-types", branch = "develop" }
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
single_use_seals = { git = "https://github.com/LNP-BP/client_side_validation", branch = "develop" }
bp-consensus = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-dbc = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-seals = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-core = { git = "https://github.com/BP-WG/bp-core", branch = "master" }
bp-invoice = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-derive = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-std = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
bp-wallet = { git = "https://github.com/BP-WG/bp-wallet", branch = "develop" }
psbt = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
descriptors = { git = "https://github.com/BP-WG/bp-std", branch = "develop" }
aluvm = { git = "https://github.com/AluVM/rust-aluvm", branch = "develop" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "develop" }
rgb-std = { git = "https://github.com/eauxxs/rgb-std", branch = "dev" }
rgb-invoice = { git = "https://github.com/eauxxs/rgb-std", branch = "dev" }
rgb-schemata = { git = "https://github.com/RGB-WG/rgb-schemata", branch = "master" }
rgb-interfaces = { git = "https://github.com/RGB-WG/rgb-interfaces", branch = "master" }
